syntax = "proto3";
option go_package = "github.com/0x00b/gobbq/components/gate/gatepb;gatepb";
package gatepb;

import "bbq.proto";
import "google/protobuf/empty.proto";
// google.protobuf.Empty

message PingPong{
}

message RegisterClientRequest{
	bbq.EntityID EntityID = 1;
}

message RegisterClientResponse{
	bbq.EntityID EntityID = 1;
}

service Gate {
	option (bbq.service_type) = Service;

	rpc RegisterClient(RegisterClientRequest) returns(RegisterClientResponse) {}
	rpc UnregisterClient(RegisterClientRequest) returns(google.protobuf.Empty) {}
	rpc Ping(PingPong) returns(PingPong) {}
}